// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyScreen for practice questions EmptyScreenStatus renders status message without next section button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  margin: 2rem auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
}

.c1 {
  margin-bottom: -1rem;
  max-width: 38rem;
  overflow: initial;
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    There are no questions for this chapter/section.
  </span>
</div>
`;

exports[`EmptyScreen for practice questions renders properly and dispatches action on click 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.5rem;
  box-shadow: 0 0.2rem 0.4rem rgba(ui-color(black),0.2);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  overflow: initial;
  font-size: 1.6rem;
  height: 5rem;
  padding: 0 3rem;
  color: #fff;
  background-color: #d4450c;
  font-weight: bold;
  border: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c6:hover {
  background-color: ,#be3c08,;
}

.c6:active {
  background-color: ,#b03808,;
}

.c6:focus {
  outline: solid #fff;
  box-shadow: inset 0 0 0 0.3rem #000;
}

.c1 {
  max-width: 38rem;
  overflow: initial;
}

.c1 .c5 {
  margin: 4rem auto;
}

.c2 {
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
}

.c3 {
  display: inline;
}

.c4 {
  font-weight: 700;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  margin: 2rem auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Select a section from the dropdown above or continue to 
      </span>
      <span
        className="c4"
        dangerouslySetInnerHTML={
          Object {
            "__html": "some title",
          }
        }
      />
    </div>
    <button
      className="c5 c6"
      data-analytics-label="Continue (Empty Screen)"
      onClick={[Function]}
    >
      Continue
    </button>
  </div>
</div>
`;
